gccida/c1/adjust_address_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2439:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2444:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2444:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2445:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2445:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2446:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2447:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2447:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2448:4: error: expected ';' after expression
rtx v16; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2448:5: error: use of undeclared identifier 'v16'
rtx v16; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2454:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2454:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2455:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2464:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2469:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)memref[1]; 
                ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2478:1: error: use of undeclared identifier 'v12'
v12 = copy_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2479:1: error: use of undeclared identifier 'v13'
v13 = v12; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2479:7: error: use of undeclared identifier 'v12'
v13 = v12; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/emit-rtl.c:2485:15: error: use of undeclared identifier 'v12'
|| *( _WORD *)v12 != 135 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/adjust_address_1/src/obj/emit-rtl.o] Error 1
